--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Benchmark data files
+data/
+benchmarks/*/output/
+benchmarks/benchmark_results.csv
+benchmarks/reference_output/
+
+# Parquet files
+*.parquet
