--- a/benchmarks/requirements.txt
+++ b/benchmarks/requirements.txt
@@ -12,6 +12,6 @@ getdaft>=0.2.0
 datafusion>=0.6.0
 
 # Optional: for dbt and sqlmesh (install separately)
-# dbt-core>=1.6.0
-# dbt-duckdb>=1.6.0
+dbt-core>=1.10.0
+dbt-duckdb>=1.9.0
 # sqlmesh>=0.25.0
